# mapreduce-mpi

./: .gitignore  CMakeLists.txt  key_value_rdd.h  main.cc  mapper.h  rdd.cc  rdd.h  reducer.h  text_rdd.cc  text_rdd.h  word_count_mapper.cc  word_count_mapper.h  word_count_reducer.cc  word_count_reducer.h
docker/: Dockerfile
